Fri Aug 12 13:51:49 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/tds/net.c:
	- check for gnutls_record_disable_padding function

Fri Aug 12 11:17:16 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac: test for pthread_cond_timedwait

Thu Aug 11 12:07:56 EDT 2011	JK Lowden <jklowden@freetds.org>
	* doc/tsql.txt updated for clarity and -D

Thu Aug 11 14:50:33 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c src/tds/convert.c:
	- clear output buffer in tds_datecrack

Thu Aug 11 11:38:02 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/getdata.c: check len returned by SQLGetData

Thu Aug 11 09:51:15 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/getdata.c: test splitting fields for "n" types

Thu Aug 11 09:07:19 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/data.c: improve test for ms date/time

Thu Aug 11 09:05:49 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: consider time offset in tds_datecrack

Thu Aug 11 09:02:43 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/query.c: avoid c++ comments

Thu Aug 11 09:01:33 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: small tds_datecrack fix

Wed Aug 10 10:03:11 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/query.c: make tds_put_data inline

Wed Aug 10 09:49:10 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/funccall.c: initialize variable

Wed Aug 10 09:47:22 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/data.c: support putting ms time/date

Wed Aug 10 09:45:01 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/data.c src/tds/query.c:
	- implement put_info as callback

Wed Aug 10 09:43:36 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: fix date conversion precision
