@@ -1,3 +1,7 @@
+Fri Aug 12 14:25:38 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/convert_tds2sql.c:
+	- support conversions from new ms date/time to binary
+
 Fri Aug 12 13:51:49 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* configure.ac src/tds/net.c:
 	- check for gnutls_record_disable_padding function
@@ -735,4 +739,4 @@ Sat Apr  9 16:15:00 EDT 2011	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.91 added because of release
 
 $FreeTDS$
-$Id: ChangeLog,v 1.3373 2011/08/12 11:51:36 freddy77 Exp $
+$Id: ChangeLog,v 1.3374 2011/08/12 12:26:59 freddy77 Exp $
